--- a/EXTRACT_VITAL_SIGNAL_IN_FMCW_RADAR_4.ipynb
+++ b/EXTRACT_VITAL_SIGNAL_IN_FMCW_RADAR_4.ipynb
@@ -7092,8 +7092,7 @@
     "\n",
     "for i,val in enumerate(mag_unwrapped_indices):\n",
     "    if(0!=val):\n",
-    "        print(\"index:\",i,\" : \",val)\n",
-    "print(\"bin of interest: \",corr_bin_of_interest)"
+    "        print(\"index:\",i,\" : \",val)\n"
    ]
   },
   {
