--- a/EXTRACT_VITAL_SIGNAL_IN_FMCW_RADAR_7.ipynb
+++ b/EXTRACT_VITAL_SIGNAL_IN_FMCW_RADAR_7.ipynb
@@ -440,7 +440,7 @@
     }
    ],
    "source": [
-    "sampling_rate = 1200# Sampling rate of the input signal\n",
+    "sampling_rate = 1200/60# Sampling rate of the input signal\n",
     "low_freq = 0.1  # Lower cutoff frequency of the bandpass filter\n",
     "high_freq = 0.4  # Upper cutoff frequency of the bandpass filter\n",
     "filter_order = 4  # Order of the bandpass filter\n",
