--- a/IF_GENERATER.ipynb
+++ b/IF_GENERATER.ipynb
@@ -206,28 +206,68 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Define parameters for the breathing model\n",
-    "duration = 10  # Duration of the simulation in seconds\n",
-    "sampling_rate = 100  # Sampling rate in Hz\n",
-    "breath_freq = 0.2  # Breathing frequency in Hz\n",
-    "breath_amplitude = 1  # Amplitude of the breathing pattern\n",
+    "# Radar parameters\n",
+    "maxR = 11\n",
+    "rangeRes = 0.01\n",
+    "maxV = 70\n",
+    "fc = 77e9\n",
+    "c = 3e8\n",
     "\n",
-    "# Generate time array\n",
-    "tt = np.linspace(0,int(Nr*Nd*Tchirp),Nr*Nd,endpoint=False) #发射信号和接收信号的采样时间\n",
-    "print(duration)\n",
-    "print(Nd*Tchirp)\n",
+    "r0 = 0.5\n",
+    "v0 = 0\n",
     "\n",
-    "# Generate a sinusoidal breathing pattern\n",
-    "breathing_pattern = breath_amplitude * np.sin(2 * np.pi * breathing_freq * tt)\n",
+    "B = c / (2 * rangeRes)\n",
+    "Tchirp = 91.72 * (1e-6)\n",
+    "endle_time = 6.3e-6\n",
+    "slope = B / Tchirp\n",
+    "f_IFmax = (slope * 2 * maxR) / c\n",
+    "f_IF = (slope * 2 * r0) / c\n",
+    "Nd = 6000\n",
+    "Nr = 256\n",
+    "SAMPLE_COUNT_CHIRP = 256\n",
+    "vres = (c / fc) / (2 * Nd * (Tchirp + endle_time))\n",
+    "Fs = Nr / Tchirp\n",
     "\n",
+    "# Time arrays\n",
+    "t = np.linspace(0, Nd * Tchirp, Nr * Nd, endpoint=False)\n",
     "\n",
-    "# Plot the breathing pattern\n",
-    "plt.figure(figsize=(8, 4))\n",
-    "plt.plot( breathing_pattern)\n",
-    "plt.title('Sinusoidal Breathing Pattern')\n",
-    "plt.xlabel('Time (seconds)')\n",
+    "# Transmit Signal (Tx)\n",
+    "angle_freq = fc * t + (slope * t * t) / 2\n",
+    "Tx = np.cos(2 * np.pi * angle_freq)\n",
+    "\n",
+    "# Calculate range delay (two-way time delay)\n",
+    "td = 2 * r0 / c\n",
+    "\n",
+    "# Received Signal (Rx)\n",
+    "freqRx = fc + slope * (t - td)\n",
+    "Rx = np.cos(2 * np.pi * (fc * (t - td) + (slope * (t - td) * (t - td)) / 2))\n",
+    "\n",
+    "# Intermediate Frequency (IF) Signal (IFx)\n",
+    "IF_angle_freq = fc * t + (slope * t * t) / 2 - (fc * (t - td) + (slope * (t - td) * (t - td)) / 2)\n",
+    "IFx = np.cos(-(2 * np.pi * (fc * (t - td) + (slope * (t - td) * (t - td)) / 2)) + (2 * np.pi * angle_freq))\n",
+    "\n",
+    "# Plotting the signals\n",
+    "plt.figure(figsize=(12, 6))\n",
+    "\n",
+    "plt.subplot(3, 1, 1)\n",
+    "plt.plot(t[0:SAMPLE_COUNT_CHIRP], Tx[0:SAMPLE_COUNT_CHIRP])\n",
+    "plt.title('Transmitted Signal (Tx)')\n",
+    "plt.xlabel('Time')\n",
     "plt.ylabel('Amplitude')\n",
-    "plt.grid(True)\n",
+    "\n",
+    "plt.subplot(3, 1, 2)\n",
+    "plt.plot(t[0:SAMPLE_COUNT_CHIRP], Rx[0:SAMPLE_COUNT_CHIRP])\n",
+    "plt.title('Received Signal (Rx)')\n",
+    "plt.xlabel('Time')\n",
+    "plt.ylabel('Amplitude')\n",
+    "\n",
+    "plt.subplot(3, 1, 3)\n",
+    "plt.plot(t[0:SAMPLE_COUNT_CHIRP], IFx[0:SAMPLE_COUNT_CHIRP])\n",
+    "plt.title('Intermediate Frequency Signal (IFx)')\n",
+    "plt.xlabel('Time')\n",
+    "plt.ylabel('Amplitude')\n",
+    "\n",
+    "plt.tight_layout()\n",
     "plt.show()\n"
    ]
   }
